# MulleObjCInetOSFoundation

./: .dependencies.inc  .gitattributes  .gitignore  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  MulleObjCInetOSFoundation.sublime-project  MulleObjCOSFoundation.sublime-project  README.md  RELEASENOTES.md  clib.json  package.json
.bootstrap/: embedded_repositories  repositories
.github/workflows/: semgrep.yml
.mulle-env/share/: environment-project.sh  environment-share.sh
.mulle-sde/share/: extension
MulleObjCOSFoundation.xcodeproj/: project.pbxproj
MulleObjCPosixFoundation.xcodeproj/: project.pbxproj
assets/dox/: TOC.md
cmake/: Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: CreateLoaderIncObjC.cmake  DependenciesIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  FallbackEnvironment.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  properties.plist
mulle-project/: version-info.sh
src/: MulleObjCInetOSFoundation-shlib.c  MulleObjCInetOSFoundation.h  MulleObjCInetOSFoundation.m  MulleObjCLoader+MulleObjCInetOSFoundation.h  MulleObjCLoader+MulleObjCInetOSFoundation.m  MulleObjCLoader+MulleObjCOSFoundation.h  MulleObjCLoader+MulleObjCOSFoundation.m  MulleObjCOSFoundation-standalone.m  MulleObjCOSFoundation.h  MulleObjCOSFoundation.m  MulleObjCOSFoundationParents.h  MulleObjCOSFoundationStandalone.m  MulleStandaloneObjCOSFoundation.h  MulleStandaloneObjCOSFoundation.m  NSData+NSURL.h  NSData+NSURL.m  NSHost+OS.h  NSHost+OS.m  NSURL+Filesystem.h  NSURL+Filesystem.m  _MulleObjCInetOSFoundation-import-private.h  _MulleObjCInetOSFoundation-import.h  _MulleObjCInetOSFoundation-include-private.h  _MulleObjCInetOSFoundation-include.h  _MulleObjCOSFoundation-dependencies.h  _MulleObjCOSFoundation-import-private.h  _MulleObjCOSFoundation-import.h  _MulleObjCOSFoundation-include-private.h  _MulleObjCOSFoundation-include.h  _MulleObjCOSFoundation.h  dependencies.h  dependencies.inc  import-private.h  import.h  include-private.h  include.h  objc-loader.inc
src/BSD/: CMakeLists.txt  MulleObjCLoader+BSD.m  MulleObjCLoader+MulleObjCBSDFoundation.m  NSCalendarDate+BSD.m  NSDate+BSD.m  NSDateFormatter+BSD.m  NSLocale+BSD.m  NSProcessInfo+BSD.m  NSTask+BSD.m  NSTimeZone+BSD.m  README-BSD.md  README.md  _MulleGMTTimeZone+BSD.m  _MulleObjCBSDFoundation-dependencies.h  _MulleObjCBSDFoundation-import-private.h  _MulleObjCBSDFoundation-import.h  _MulleObjCBSDFoundation-include-private.h  _MulleObjCBSDFoundation-include.h  _MulleObjCOSLoader+BSD.m  _NSGMTTimeZone+BSD.m  dependencies.h  dependencies.inc  import-private.h  import.h  include-private.h  include.h  mulle_bsd_tm.c  mulle_bsd_tm.h  objc-loader.inc
src/Base/: CMakeLists.txt  MulleObjCLoader+MulleObjCOSBaseFoundation.m  MulleObjCLoader+OSBase.m  MulleObjCOSBaseFoundation.h  NSBundle+Private.h  NSBundle-Private.h  NSBundle.h  NSBundle.m  NSConditionLock.h  NSConditionLock.m  NSData+MulleMemoryMapping.h  NSData+MulleMemoryMapping.m  NSDirectoryEnumerator.h  NSDirectoryEnumerator.m  NSFileHandle+NSRunLoop.h  NSFileHandle+NSRunLoop.m  NSFileHandle.h  NSFileHandle.m  NSFileManager+Private.h  NSFileManager-Private.h  NSFileManager.h  NSFileManager.m  NSObject+NSRunLoop.h  NSObject+NSRunLoop.m  NSPathUtilities+OSBase-Private.h  NSPathUtilities+OSBasePrivate.h  NSPathUtilities+Private.h  NSPipe.h  NSPipe.m  NSProcessInfo.h  NSProcessInfo.m  NSRunLoop+Private.h  NSRunLoop-Private.h  NSRunLoop.h  NSRunLoop.m  NSTask+Private.h  NSTask-Private.h  NSTask.h  (+23 more)
src/FreeBSD/: CMakeLists.txt  MulleObjCLoader+MulleObjCFreeBSDFoundation.m  NSBundle+FreeBSD.m  NSFileManager+FreeBSD.m  NSPathUtilities+FreeBSD.m  NSProcessInfo+FreeBSD.m  NSString+FreeBSD.m  NSTask+FreeBSD.m  README-FreeBSD.md  README.md  _MulleObjCFreeBSDFoundation-dependencies.h  _MulleObjCFreeBSDFoundation-import-private.h  _MulleObjCFreeBSDFoundation-import.h  _MulleObjCFreeBSDFoundation-include-private.h  _MulleObjCFreeBSDFoundation-include.h  dependencies.h  import-private.h  import.h  include-private.h  include.h
src/FreeBSD/.mulle-env/share/: environment-project.sh  environment-share.sh
src/FreeBSD/.mulle-sourcetree/etc/: config
src/FreeBSD/.mulle/etc/sourcetree/: config
src/FreeBSD/cmake/: Headers.cmake  HeadersAndSources.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
src/FreeBSD/cmake/share/: CreateLoaderIncObjC.cmake  DependenciesIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
src/Linux/: CMakeLists.txt  MulleObjCLoader+MulleObjCLinuxFoundation.m  NSBundle+Linux.m  NSCalendarDate+Linux.m  NSDate+Linux.m  NSDateFormatter+Linux.m  NSFileManager+Linux.m  NSLocale+Linux.m  NSPathUtilities+Linux.m  NSProcessInfo+Linux.m  NSString+Linux.m  NSTask+Linux.m  NSTimeZone+Linux.m  README-Linux.md  README.md  _MulleGMTTimeZone+Linux.m  _MulleObjCLinuxFoundation-dependencies.h  _MulleObjCLinuxFoundation-import-private.h  _MulleObjCLinuxFoundation-import.h  _MulleObjCLinuxFoundation-include-private.h  _MulleObjCLinuxFoundation-include.h  _NSGMTTimeZone+Linux.m  dependencies.h  import-private.h  import.h  include-private.h  include.h  objc-loader.inc
src/Linux/.mulle-env/share/: environment-project.sh  environment-share.sh
src/Linux/.mulle-sourcetree/etc/: config
src/Linux/.mulle/etc/sourcetree/: config
src/Linux/.mulle/share/env/: environment-project.sh  environment-share.sh
src/Linux/cmake/: Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
src/Linux/cmake/share/: CreateLoaderIncObjC.cmake  DependenciesIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
templates/: README.md.scion
test/: README.md  import.h  include.h
tests/: README.md  build-for-test.sh  build-test.sh  run-test.sh
(+437 files in other folders)
